--- a/docs/po/zh.po
+++ b/docs/po/zh.po
@@ -7642,7 +7642,7 @@ msgid ""
 "of the mainnet inscriptions."
 msgstr ""
 "为了避免在测试时必须将依赖铭文ID更改为主网铭文ID，你可以在测试时使用内容代"
-"理。`ord server`接受一个`--content-proxy`选项，它需要另一个`ord server`实例的"
+"理。`ord server`接受一个`--proxy`选项，它需要另一个`ord server`实例的"
 "URL。当设置了内容代理并且铭文未找到时，向`/content/<INSCRIPTION_ID>`发出请"
 "求，`ord server`将会将请求转发给内容代理。这允许你运行一个带有主网内容代理的"
 "测试`ord server`实例。然后你可以在测试铭文中使用主网铭文ID，这将返回主网铭文"
@@ -7651,7 +7651,7 @@ msgstr ""
 #: src/guides/testing.md:155
 msgid ""
 "```\n"
-"ord --regtest server --content-proxy https://ordinals.com\n"
+"ord --regtest server --proxy https://ordinals.com\n"
 "```"
 msgstr ""
 
