--- a/docs/po/ja.po
+++ b/docs/po/ja.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 序数理論マニュアル\n"
 "POT-Creation-Date: 2025-01-18T06:30:23+09:00\n"
-"PO-Revision-Date: 2023-09-06 10:03+0800\n"
-"Last-Translator: Dr.JingLee @ordjingle <j@ordinals.foundation>\n"
+"PO-Revision-Date: 2025-01-18T06:30:23+09:00\n"
+"Last-Translator: SatoshiRoppongi <@SatoshiRoppongi>\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version:1.0\n"
